# advana-desafio-mle-master

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  release.yml  terraform.yml
challenge/: __init__.py  api.py  exploration.ipynb  model.py  model_artifact.py
data/: model.joblib  model.skops  train_model.py
docs/: challenge.md
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
openspec/changes/archive/2026-02-26-productivize-model-with-hexagonal-architecture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-productivize-model-with-hexagonal-architecture/specs/hexagonal-prediction-architecture/: spec.md
openspec/changes/archive/2026-02-26-productivize-model-with-hexagonal-architecture/specs/model-port-and-adapter/: spec.md
openspec/changes/model-adapter-cutover-plan/: design.md  proposal.md  tasks.md
openspec/changes/model-adapter-cutover-plan/specs/legacy-tests-cutover-governance/: spec.md
openspec/changes/model-adapter-cutover-plan/specs/selected-model-adapter-runtime/: spec.md
openspec/specs/hexagonal-prediction-architecture/: spec.md
openspec/specs/model-port-and-adapter/: spec.md
openspec/specs/prediction-http-entrypoint/: spec.md
tests/api/: test_api.py
tests/model/: test_model.py
tests/stress/: api_stress.py
tools/hooks/: check_arch_rules.py
workflows/: ci.yml
(+1 files in other folders)
